--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-JavaFiddle using the Play! Framework
+This is your new Play 2.0 application
+=====================================
+
+This file will be packaged with your application, when using `play dist`.
